<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="tv_year">2019</string>
    <string name="title_movie">Title Movie</string>
    <string name="poster_image">Poster Image</string>
    <string name="refresh">Refresh</string>
    <string name="tn_poster">tn_poster</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="overview">Overview</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="indonesia">Bahasa Indonesia</string>
    <string name="change_language">Change Language</string>
    <string name="restart_app">Restart App</string>
    <string name="name_movie">Name Movie</string>
    <string name="year">Year</string>
    <string name="_0_0">0.0</string>
    <string name="voters">Voters</string>
    <string name="info">Info</string>
    <string name="cast">Cast</string>
    <string name="coming_soon">Coming soon</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="del_favorite">Delete Favorite</string>
    <string name="occured_error">Occurred Error</string>
    <string name="favorite_movie_is_empty">Favorite movie is empty</string>
    <string name="favorite_tv_show_is_empty">Favorite tv show is empty</string>
    <string name="image_empty_favorite">Image Empty Favorite</string>
    <string name="search_hint">Look for something</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found_image">Not Found Image</string>
    <string name="no_search_found">No search found</string>
    <string name="add_widget">Add widget</string>
    <string name="daily_notification_remainder">Daily Notification Remainder</string>
    <string name="daily_notification_content">Lets open the app, there are lots of interesting films</string>
    <string name="latest_movie_reminders">Latest movie reminders</string>
    <string name="new_movie">New Movie</string>
    <string name="more_new_movie">More New Movie</string>

</resources>
