<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tvshowdetail.TVShowDetailActivity">

    <ImageView
        android:id="@+id/img_backdrop"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:background="@color/placeholder_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_backdrop" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_poster"
            android:transitionName="@string/tn_poster"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_year"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/img_backdrop" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_movie"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    <TextView
        android:id="@+id/overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/the_overview_movie"
        android:textAlignment="textStart"
        android:textIsSelectable="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_title" />

</androidx.constraintlayout.widget.ConstraintLayout>