<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:transitionName="@string/tn_poster"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:background="@color/placeholder_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster_image" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="54dp"
            android:text="@string/tv_year"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondText"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="@+id/img_poster" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/title_movie"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_year" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>