<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_title_setting_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"/>

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_setting_language"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"/>

            <RadioButton
                android:id="@+id/rb_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restart_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_language"
            android:layout_alignParentEnd="true"
            android:text="@string/restart_app"
            style="Colored"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>