<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.moviedetail.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeDetail"
        app:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1">

                <ImageView
                    android:id="@+id/img_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:contentDescription="@string/image_backdrop"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_poster"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="190dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:transitionName="@string/tn_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/poster_image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:fontFamily="@font/rubik_medium"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorSecondText"
                    app:layout_constraintStart_toEndOf="@+id/card_poster"
                    app:layout_constraintTop_toBottomOf="@+id/img_backdrop" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/name_movie"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_year"
                    app:layout_constraintTop_toBottomOf="@+id/tv_year" />

                <LinearLayout
                    android:id="@+id/layout_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/_0_0"
                        android:fontFamily="@font/rubik_medium"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/rb_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.RatingBar.Small" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/voters"
                    android:textColor="@color/colorSecondText"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/layout_vote_average"
                    app:layout_constraintTop_toBottomOf="@+id/layout_vote_average" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_poster">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_genre"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:listitem="@layout/genre_item"
                        android:layout_centerVertical="true"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <include
                                layout="@layout/genre_placeholder_item"/>

                            <include
                                layout="@layout/genre_placeholder_item"/>

                            <include
                                layout="@layout/genre_placeholder_item"/>

                        </LinearLayout>

                    </com.facebook.shimmer.ShimmerFrameLayout>

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                style="@style/ToolbarDetail"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            style="@style/TabLayoutDetail"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>